third_party/move/tools/move-package-manifest/tests/dev-addresses/duplicate-dev-addresses.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [dev-addresses]
6 | addr1 = "0x1"
7 | addr1 = "0x2"
  | ^ duplicate key `addr1` in table `dev-addresses`
  |
